extends Panel


@onready var cotegories_list = $VBoxContainer/HBoxContainer2

@onready var category_1 = $VBoxContainer/HBoxContainer2/Category_1
@onready var category_2 = $VBoxContainer/HBoxContainer2/Category_2
@onready var category_3 = $VBoxContainer/HBoxContainer2/Category_3
@onready var category_4 = $VBoxContainer/HBoxContainer2/Category_4
@onready var category_5 = $VBoxContainer/HBoxContainer2/Category_5

